[package]
name = "dnssec-prover-uniffi"
version = "0.1.0"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://git.bitcoin.ninja/index.cgi?p=dnssec-prover"
description = "A simple crate which allows for the creation and validation of transferrable proofs of entries in the DNS."
edition = "2021"
build = "build.rs"

[dependencies]
dnssec-prover = { path = "../", default-features = false, features = ["validation"] }
uniffi = { version = "0.27" }

[build-dependencies]
uniffi = { version = "0.27", features = [ "build" ] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
